option('static_wxwidgets', 
  type: 'combo', 
  choices: [ 'auto', 'enabled' ], value: 'auto',
  description: 'Whether to link with static wxWidgets'
)

option('macos_min',
  type: 'string',
  value: '11',
  description: 'The minimum macOS version supported'
)

option('macos_universal',
  type: 'combo',
  choices: [ 'false', 'true' ], value: 'false',
  description: 'Whether to build a macOS Universal binary (arm64, x86_64)'
)
