# Add all .cpp files to the project sources.
srcs += files(
    'conjugateur.cpp',
    'inspectorframe.cpp',
    'inspectorpanel.cpp',
    'main.cpp',
    'mainframe.cpp',
    'quizitem.cpp',
    'toppanel.cpp',
    'updatechecker.cpp',
    'verbview.cpp',
    'verbviewpanel.cpp'
)

# Execute meson.build in the 'languages' subdir.
subdir('languages')
