# Add all .cpp files to the project sources.
srcs += files(
    'conjugator.cpp',
    'inspectorframe.cpp',
    'inspectorpanel.cpp',
    'main.cpp',
    'mainframe.cpp',
    'quizitem.cpp',
    'settingsframe.cpp',
    'settingspanel.cpp',
    'toppanel.cpp',
    'updatechecker.cpp',
    'verbview.cpp',
    'verbviewpanel.cpp'
)

# Execute meson.build in the 'languages' subdir.
subdir('languages')
