srcs += files(
    'acheter.verb.cpp',
    'agir.verb.cpp',
    'aller.verb.cpp',
    'amener.verb.cpp',
    'apercevoir.verb.cpp',
    'apparaitre.verb.cpp',
    'appeler.verb.cpp',
    'applaudir.verb.cpp',
    'appuyer.verb.cpp',
    'atteindre.verb.cpp',
    'attendre.verb.cpp',
    'avancer.verb.cpp',
    'avoir.verb.cpp',
    'battre.verb.cpp',
    'bavarder.verb.cpp',
    'boire.verb.cpp',
    'choisir.verb.cpp',
    'conduire.verb.cpp',
    'confondre.verb.cpp',
    'connaitre.verb.cpp',
    'construire.verb.cpp',
    'courir.verb.cpp',
    'couvrir.verb.cpp',
    'craindre.verb.cpp',
    'croire.verb.cpp',
    'cueillir.verb.cpp',
    'decevoir.verb.cpp',
    'demolir.verb.cpp',
    'detruire.verb.cpp',
    'devoir.verb.cpp',
    'dire.verb.cpp',
    'disparaitre.verb.cpp',
    'donner.verb.cpp',
    'dormir.verb.cpp',
    'ecrire.verb.cpp',
    'effacer.verb.cpp',
    'employer.verb.cpp',
    'enlever.verb.cpp',
    'entendre.verb.cpp',
    'envoyer.verb.cpp',
    'esperer.verb.cpp',
    'essayer.verb.cpp',
    'essuyer.verb.cpp',
    'eteindre.verb.cpp',
    'etre.verb.cpp',
    'exagerer.verb.cpp',
    'faire.verb.cpp',
    'fermer.verb.cpp'
)
