# Add all verb files to the project sources.
srcs += files(
    'acheter.verb.cpp',
    'agir.verb.cpp',
    'aimer.verb.cpp',
    'aller.verb.cpp',
    'amener.verb.cpp',
    'apercevoir.verb.cpp',
    'apparaitre.verb.cpp',
    'appeler.verb.cpp',
    'applaudir.verb.cpp',
    'appuyer.verb.cpp',
    'atteindre.verb.cpp',
    'attendre.verb.cpp',
    'avancer.verb.cpp',
    'avoir.verb.cpp',
    'battre.verb.cpp',
    'bavarder.verb.cpp',
    'boire.verb.cpp',
    'chercher.verb.cpp',
    'choisir.verb.cpp',
    'conduire.verb.cpp',
    'confondre.verb.cpp',
    'connaitre.verb.cpp',
    'construire.verb.cpp',
    'courir.verb.cpp',
    'couvrir.verb.cpp',
    'craindre.verb.cpp',
    'croire.verb.cpp',
    'cueillir.verb.cpp',
    'decevoir.verb.cpp',
    'demolir.verb.cpp',
    'detruire.verb.cpp',
    'devoir.verb.cpp',
    'dire.verb.cpp',
    'disparaitre.verb.cpp',
    'donner.verb.cpp',
    'dormir.verb.cpp',
    'ecrire.verb.cpp',
    'effacer.verb.cpp',
    'employer.verb.cpp',
    'enlever.verb.cpp',
    'entendre.verb.cpp',
    'envoyer.verb.cpp',
    'esperer.verb.cpp',
    'essayer.verb.cpp',
    'essuyer.verb.cpp',
    'eteindre.verb.cpp',
    'etre.verb.cpp',
    'exagerer.verb.cpp',
    'faire.verb.cpp',
    'falloir.verb.cpp',
    'fermer.verb.cpp',
    'fuir.verb.cpp',
    'grimper.verb.cpp',
    'guerir.verb.cpp',

    'habiter.verb.cpp',
    'parler.verb.cpp',

    'sAssoirMod.verb.cpp',
    'sAsseoirTrad.verb.cpp',
    'savoir.verb.cpp',
    'secher.verb.cpp',
    'sEnnuyer.verb.cpp',
    'sentir.verb.cpp',
    'sePlaindre.verb.cpp',
    'sePromener.verb.cpp',
    'seRejouir.verb.cpp',
    'servir.verb.cpp',
    'seTaire.verb.cpp',
    'sInquieter.verb.cpp',
    'souffrir.verb.cpp',
    'suffire.verb.cpp',
    'suivre.verb.cpp',
    'tenir.verb.cpp',
    'traduire.verb.cpp',
    'valoir.verb.cpp',
    'vendre.verb.cpp',
    'venir.verb.cpp',
    'vivre.verb.cpp',
    'voir.verb.cpp',
    'vouloir.verb.cpp'
)
