# Add all verb files to the project sources.
srcs += files(
  'acheter.verb.cpp',
  'agir.verb.cpp',
  'aimer.verb.cpp',
  'aller.verb.cpp',
  'amener.verb.cpp',
  'apercevoir.verb.cpp',
  'apparaitre.verb.cpp',
  'appeler.verb.cpp',
  'applaudir.verb.cpp',
    'apercevoir.verb.cpp',
    'appuyer.verb.cpp',
    'atteindre.verb.cpp',
    'attendre.verb.cpp',
    'avancer.verb.cpp',
    'avoir.verb.cpp',
    'battre.verb.cpp',
    'bavarder.verb.cpp',
    'boire.verb.cpp',
    'chercher.verb.cpp',
    'choisir.verb.cpp',
    'commencer.verb.cpp',
    'conduire.verb.cpp',
    'confondre.verb.cpp',
    'connaitre.verb.cpp',
    'construire.verb.cpp',
    'courir.verb.cpp',
    'couvrir.verb.cpp',
    'craindre.verb.cpp',
    'croire.verb.cpp',
    'cueillir.verb.cpp',
    'decevoir.verb.cpp',
    'demolir.verb.cpp',
    'descendre.verb.cpp',
    'detruire.verb.cpp',
    'devoir.verb.cpp',
    'dire.verb.cpp',
    'disparaitre.verb.cpp',
    'donner.verb.cpp',
    'dormir.verb.cpp',
    'ecrire.verb.cpp',
    'effacer.verb.cpp',
    'employer.verb.cpp',
    'enlever.verb.cpp',
    'entendre.verb.cpp',
    'entrer.verb.cpp',
    'envoyer.verb.cpp',
    'esperer.verb.cpp',
    'essayer.verb.cpp',
    'essuyer.verb.cpp',
    'eteindre.verb.cpp',
    'etre.verb.cpp',
    'exagerer.verb.cpp',
    'faire.verb.cpp',
    'falloir.verb.cpp',
    'fermer.verb.cpp',
    'finir.verb.cpp',
    'fuir.verb.cpp',
    'grimper.verb.cpp',
    'guerir.verb.cpp',
    'habiter.verb.cpp',
    'inventer.verb.cpp',
    'jeter.verb.cpp',
    'joindre.verb.cpp',
    'lancer.verb.cpp',
    'laver.verb.cpp',
    'lire.verb.cpp',
    'maigrir.verb.cpp',
    'manger.verb.cpp',
    'mener.verb.cpp',
    'mentir.verb.cpp',
    'mettre.verb.cpp',
    'monter.verb.cpp',
    'mourir.verb.cpp',
    'nager.verb.cpp',
  'naitre.verb.cpp',
  'nettoyer.verb.cpp',
  'obeir.verb.cpp',
  'offrir.verb.cpp',
  'ouvrir.verb.cpp',
  'paraitre.verb.cpp',
  'parler.verb.cpp',
  'partir.verb.cpp',
  'payer.verb.cpp',
  'peindre.verb.cpp',
  'perdre.verb.cpp',
  'peser.verb.cpp',
  'plaire.verb.cpp',
  'pleuvoir.verb.cpp',
  'pouvoir.verb.cpp',
  'prendre.verb.cpp',
  'produire.verb.cpp',
  'proteger.verb.cpp',
  'reagir.verb.cpp',
  'recevoir.verb.cpp',
  'reduire.verb.cpp',
  'reflechir.verb.cpp',
  'remplir.verb.cpp',
  'rendre.verb.cpp',
  'repondre.verb.cpp',
  'reussir.verb.cpp',
  'rire.verb.cpp',
  'rompre.verb.cpp',
  'sAsseoir.verb.cpp',
  'savoir.verb.cpp',
  'secher.verb.cpp',
  'sEnnuyer.verb.cpp',
  'sentir.verb.cpp',
  'sePlaindre.verb.cpp',
  'sePromener.verb.cpp',
  'seRejouir.verb.cpp',
  'servir.verb.cpp',
  'seTaire.verb.cpp',
  'sInquieter.verb.cpp',
  'sortir.verb.cpp',
  'souffrir.verb.cpp',
  'suffire.verb.cpp',
  'suivre.verb.cpp',
  'tenir.verb.cpp',
  'traduire.verb.cpp',
  'valoir.verb.cpp',
  'vendre.verb.cpp',
  'venir.verb.cpp',
  'vieillir.verb.cpp',
  'vivre.verb.cpp',
  'voir.verb.cpp',
  'vouloir.verb.cpp',
)
